@@ -10,9 +10,9 @@
 package org.eclipse.hawkbit.repository.test.util;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.eclipse.hawkbit.im.authentication.SpPermission.READ_TENANT_CONFIGURATION;
-import static org.eclipse.hawkbit.im.authentication.SpRole.CONTROLLER_ROLE;
-import static org.eclipse.hawkbit.im.authentication.SpRole.SYSTEM_ROLE;
+import static org.eclipse.hawkbit.auth.SpPermission.READ_TENANT_CONFIGURATION;
+import static org.eclipse.hawkbit.auth.SpRole.CONTROLLER_ROLE;
+import static org.eclipse.hawkbit.auth.SpRole.SYSTEM_ROLE;
 
 import java.io.File;
 import java.io.IOException;
@@ -59,6 +59,7 @@ import org.eclipse.hawkbit.repository.TargetTagManagement;
 import org.eclipse.hawkbit.repository.TargetTypeManagement;
 import org.eclipse.hawkbit.repository.TenantConfigurationManagement;
 import org.eclipse.hawkbit.repository.exception.EntityNotFoundException;
+import org.eclipse.hawkbit.repository.helper.TenantConfigHelper;
 import org.eclipse.hawkbit.repository.model.Action;
 import org.eclipse.hawkbit.repository.model.Action.ActionStatusCreate;
 import org.eclipse.hawkbit.repository.model.Action.ActionType;
@@ -77,8 +78,6 @@ import org.eclipse.hawkbit.repository.model.TargetType;
 import org.eclipse.hawkbit.repository.model.TargetUpdateStatus;
 import org.eclipse.hawkbit.repository.test.TestConfiguration;
 import org.eclipse.hawkbit.repository.test.matcher.EventVerifier;
-import org.eclipse.hawkbit.security.SystemSecurityContext;
-import org.eclipse.hawkbit.tenancy.TenantAware;
 import org.eclipse.hawkbit.tenancy.configuration.TenantConfigurationProperties.TenantConfigurationKey;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.AfterEach;
@@ -164,19 +163,13 @@ public abstract class AbstractIntegrationTest {
     @Autowired
     protected ArtifactManagement artifactManagement;
     @Autowired
-    protected TenantAware tenantAware;
-    @Autowired
     protected SystemManagement systemManagement;
-    @Autowired
-    protected TenantConfigurationManagement tenantConfigurationManagement;
     @Autowired
     protected RolloutManagement rolloutManagement;
     @Autowired
     protected RolloutHandler rolloutHandler;
     @Autowired
     protected RolloutGroupManagement rolloutGroupManagement;
-    @Autowired
-    protected SystemSecurityContext systemSecurityContext;
     @Autowired
     protected ArtifactStorage artifactStorage;
     @Autowired
@@ -215,21 +208,21 @@ public abstract class AbstractIntegrationTest {
         final String description = "Updated description.";
 
         osType = SecurityContextSwitch
-                .callAsPrivileged(() -> testdataFactory.findOrCreateSoftwareModuleType(TestdataFactory.SM_TYPE_OS));
-        osType = SecurityContextSwitch.callAsPrivileged(() -> softwareModuleTypeManagement
+                .asPrivileged(() -> testdataFactory.findOrCreateSoftwareModuleType(TestdataFactory.SM_TYPE_OS));
+        osType = SecurityContextSwitch.asPrivileged(() -> softwareModuleTypeManagement
                 .update(SoftwareModuleTypeManagement.Update.builder().id(osType.getId()).description(description).build()));
 
-        appType = SecurityContextSwitch.callAsPrivileged(
+        appType = SecurityContextSwitch.asPrivileged(
                 () -> testdataFactory.findOrCreateSoftwareModuleType(TestdataFactory.SM_TYPE_APP, Integer.MAX_VALUE));
-        appType = SecurityContextSwitch.callAsPrivileged(() -> softwareModuleTypeManagement
+        appType = SecurityContextSwitch.asPrivileged(() -> softwareModuleTypeManagement
                 .update(SoftwareModuleTypeManagement.Update.builder().id(appType.getId()).description(description).build()));
 
         runtimeType = SecurityContextSwitch
-                .callAsPrivileged(() -> testdataFactory.findOrCreateSoftwareModuleType(TestdataFactory.SM_TYPE_RT));
-        runtimeType = SecurityContextSwitch.callAsPrivileged(() -> softwareModuleTypeManagement
+                .asPrivileged(() -> testdataFactory.findOrCreateSoftwareModuleType(TestdataFactory.SM_TYPE_RT));
+        runtimeType = SecurityContextSwitch.asPrivileged(() -> softwareModuleTypeManagement
                 .update(SoftwareModuleTypeManagement.Update.builder().id(runtimeType.getId()).description(description).build()));
 
-        standardDsType = SecurityContextSwitch.callAsPrivileged(() -> testdataFactory.findOrCreateDefaultTestDsType());
+        standardDsType = SecurityContextSwitch.asPrivileged(() -> testdataFactory.findOrCreateDefaultTestDsType());
 
         // publish the reset counter market event to reset the counters after
         // setup. The setup is transparent by the test and its @ExpectedEvent
@@ -238,7 +231,6 @@ public abstract class AbstractIntegrationTest {
         // ApplicationEventMultiCaster which the TestConfiguration is doing so
         // the order of the events keep the same.
         EventVerifier.publishResetMarkerEvent(eventPublisher);
-
     }
 
     @AfterEach
@@ -250,6 +242,10 @@ public abstract class AbstractIntegrationTest {
                 log.warn("Cannot cleanup file-directory", e);
             }
         }
+    }
+
+    protected static TenantConfigurationManagement tenantConfigurationManagement() {
+        return TenantConfigHelper.getTenantConfigurationManagement();
     }
 
     /**
@@ -350,13 +346,14 @@ public abstract class AbstractIntegrationTest {
                         .actionType(actionType).forceTime(forcedTime).weight(weight).confirmationRequired(confirmationFlowActive)
                         .build())
                 .toList();
-        final List<DistributionSetAssignmentResult> results = deploymentManagement.assignDistributionSets(deploymentRequests);
+        final List<DistributionSetAssignmentResult> results = deploymentManagement.assignDistributionSets(deploymentRequests, null);
         assertThat(results).hasSize(1);
         return results.get(0);
     }
 
     protected List<DistributionSetAssignmentResult> assignDistributionSets(final List<DeploymentRequest> requests) {
-        final List<DistributionSetAssignmentResult> distributionSetAssignmentResults = deploymentManagement.assignDistributionSets(requests);
+        final List<DistributionSetAssignmentResult> distributionSetAssignmentResults =
+                deploymentManagement.assignDistributionSets(requests, null);
         assertThat(distributionSetAssignmentResults).hasSize(requests.size());
         return distributionSetAssignmentResults;
     }
@@ -370,7 +367,7 @@ public abstract class AbstractIntegrationTest {
     }
 
     protected DistributionSetAssignmentResult makeAssignment(final DeploymentRequest request) {
-        final List<DistributionSetAssignmentResult> results = deploymentManagement.assignDistributionSets(Collections.singletonList(request));
+        final List<DistributionSetAssignmentResult> results = deploymentManagement.assignDistributionSets(List.of(request), null);
         assertThat(results).hasSize(1);
         return results.get(0);
     }
@@ -413,22 +410,22 @@ public abstract class AbstractIntegrationTest {
     }
 
     protected void enableMultiAssignments() {
-        tenantConfigurationManagement.addOrUpdateConfiguration(TenantConfigurationKey.MULTI_ASSIGNMENTS_ENABLED, true);
+        tenantConfigurationManagement().addOrUpdateConfiguration(TenantConfigurationKey.MULTI_ASSIGNMENTS_ENABLED, true);
     }
 
     protected void enableConfirmationFlow() {
-        tenantConfigurationManagement.addOrUpdateConfiguration(TenantConfigurationKey.USER_CONFIRMATION_ENABLED, true);
+        tenantConfigurationManagement().addOrUpdateConfiguration(TenantConfigurationKey.USER_CONFIRMATION_FLOW_ENABLED, true);
     }
 
     protected void disableConfirmationFlow() {
-        tenantConfigurationManagement.addOrUpdateConfiguration(TenantConfigurationKey.USER_CONFIRMATION_ENABLED, false);
+        tenantConfigurationManagement().addOrUpdateConfiguration(TenantConfigurationKey.USER_CONFIRMATION_FLOW_ENABLED, false);
     }
 
     protected boolean isConfirmationFlowActive() {
         return SecurityContextSwitch.getAs(
                 SecurityContextSwitch.withUser("as_system", READ_TENANT_CONFIGURATION),
-                () -> tenantConfigurationManagement
-                        .getConfigurationValue(TenantConfigurationKey.USER_CONFIRMATION_ENABLED, Boolean.class)
+                () -> tenantConfigurationManagement()
+                        .getConfigurationValue(TenantConfigurationKey.USER_CONFIRMATION_FLOW_ENABLED, Boolean.class)
                         .getValue());
     }
 
@@ -469,16 +466,16 @@ public abstract class AbstractIntegrationTest {
     }
 
     protected void enableBatchAssignments() {
-        tenantConfigurationManagement.addOrUpdateConfiguration(TenantConfigurationKey.BATCH_ASSIGNMENTS_ENABLED, true);
+        tenantConfigurationManagement().addOrUpdateConfiguration(TenantConfigurationKey.BATCH_ASSIGNMENTS_ENABLED, true);
     }
 
     protected void disableBatchAssignments() {
-        tenantConfigurationManagement.addOrUpdateConfiguration(TenantConfigurationKey.BATCH_ASSIGNMENTS_ENABLED, false);
+        tenantConfigurationManagement().addOrUpdateConfiguration(TenantConfigurationKey.BATCH_ASSIGNMENTS_ENABLED, false);
     }
 
     protected boolean isConfirmationFlowEnabled() {
-        return tenantConfigurationManagement
-                .getConfigurationValue(TenantConfigurationKey.USER_CONFIRMATION_ENABLED, Boolean.class).getValue();
+        return tenantConfigurationManagement().getConfigurationValue(TenantConfigurationKey.USER_CONFIRMATION_FLOW_ENABLED, Boolean.class)
+                .getValue();
     }
 
     // ensure that next action will get current time millis AFTER got from the previous
